# bisect-demo

./: README.md  pyproject.toml  square.py  test_square.py
