[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "square"
author = "Thomas Kluyver"
author-email = "thomas@kluyver.me.uk"
home-page = "https://github.com/takluyver/square"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
square = "square:main"
